# play-together

./: .gitignore  CMakeLists.txt
assets/maps/assurance/: aabbs.json  environment.json  items.json  level.json  levers.json  platforms.json  polygons.json  polygons.txt  traps.json
assets/maps/diversity/: aabbs.json  boxes.txt  dangerPolygons.txt  environment.json  items.json  level.json  levers.json  platforms.json  polygons.json  polygons.txt  traps.json
assets/maps/experimentation/: polygons.txt
assets/maps/newWorld/: boxes.txt  dangerPolygons.txt  polygons.txt
assets/maps/slopeofabitch/: polygons.txt
assets/maps/vow/: polygons.txt
assets/textures/world_1/crushers/: properties.json
cmake/: FindSDL2.cmake  FindSDL2_gfx.cmake
dependencies/SDL2_gfx/: SDL2_gfxPrimitives.c
include/Game/: Camera.h  Game.h  InputManager.h  Level.h  Lever.h  Menu.h  Player.h  PlayerManager.h  Point.h  Polygon.h  RenderManager.h  SaveManager.h  SpecialBoxes.h  TextBox.h  TextInput.h
include/Game/Events/: Asteroid.h  Rescue.h
include/Game/GameManagers/: BroadPhaseManager.h  EventCollisionManager.h  InputManager.h  PlayerCollisionManager.h  PlayerManager.h  RenderManager.h  SaveManager.h  TextureManager.h
include/Game/Items/: Coin.h  Item.h  SizePowerUp.h  SpeedPowerUp.h
include/Game/LevelManagers/: TextureManager.h
include/Game/Levers/: CrusherLever.h  Lever.h  PlatformLever.h  TreadmillLever.h
include/Game/Objects/: MovingPlatform1D.h  MovingPlatform2D.h  Player.h  SpecialBoxes.h  SwitchingPlatform.h
include/Game/Traps/: Crusher.h  CrusherLever.h
include/Graphics/: Animation.h  Button.h  Layer.h  Sprite.h  Texture.h
include/Network/: Client.h  NetworkError.h  NetworkManager.h  Server.h  TCPClient.h  TCPError.h  TCPServer.h  UDPClient.h  UDPError.h  UDPServer.h
include/Network/Unix/: TCPClient.h  TCPServer.h  UDPClient.h  UDPServer.h
include/Network/WIN32/: TCPClient.h  TCPServer.h  UDPClient.h  UDPServer.h
include/Physics/: AABB.h  Collision.h  CollisionHandler.h  CollisionManager.h  Polygon.h
include/Sounds/: Music.h  SoundEffect.h
include/Utils/: ApplicationConsole.h  GameConsole.h  Mediator.h  MessageQueue.h  Saves.h  TCPError.h  UDPError.h
src/: Main.cpp
src/Game/: Camera.cpp  Game.cpp  InputManager.cpp  Level.cpp  Lever.cpp  Menu.cpp  Player.cpp  PlayerManager.cpp  Polygon.cpp  RenderManager.cpp  SaveManager.cpp  SpecialBoxes.cpp  TextBox.cpp  TextInput.cpp
src/Game/Events/: Asteroid.cpp  Rescue.cpp
src/Game/GameManagers/: BroadPhaseManager.cpp  EventCollisionManager.cpp  InputManager.cpp  PlayerCollisionManager.cpp  PlayerManager.cpp  RenderManager.cpp  SaveManager.cpp  TextureManager.cpp
src/Game/Items/: Coin.cpp  Item.cpp  SizePowerUp.cpp  SpeedPowerUp.cpp
src/Game/LevelManagers/: TextureManager.cpp
src/Game/Levers/: CrusherLever.cpp  Lever.cpp  PlatformLever.cpp  TreadmillLever.cpp
src/Game/Objects/: Asteroid.cpp  MovingPlatform1D.cpp  MovingPlatform2D.cpp  Player.cpp  SpecialBoxes.cpp  SwitchingPlatform.cpp
src/Game/Traps/: Crusher.cpp  CrusherLever.cpp
src/Graphics/: Button.cpp  Layer.cpp  Sprite.cpp  Texture.cpp
src/Network/: Client.cpp  NetworkManager.cpp  Server.cpp  TCPClient.cpp  TCPServer.cpp  UDPClient.cpp  UDPServer.cpp
src/Network/Unix/: TCPClient.cpp  TCPServer.cpp  UDPClient.cpp  UDPServer.cpp
src/Network/WIN32/: TCPClient.cpp  TCPServer.cpp  UDPClient.cpp  UDPServer.cpp
src/Physics/: AABB.cpp  Collision.cpp  CollisionHandler.cpp  CollisionManager.cpp  Polygon.cpp
src/Sounds/: Music.cpp  SoundEffect.cpp
src/Utils/: ApplicationConsole.cpp  GameConsole.cpp  Mediator.cpp  MessageQueue.cpp  Saves.cpp
